[metadata]
name = aws_feature_store
version = 0.0.1
author = Ihor Bilyk
author_email = bilyk.box@gmail.com
description = Simplified approach from SageMaker Feature Store
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bilykigor/aws_feature_store
project_urls =
    Bug Tracker = https://github.com/bilykigor/aws_feature_store/-/issues
    repository = https://github.com/bilykigor/aws_feature_store
classifiers =
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src